--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
       <link rel="stylesheet" href="popup.css"></link>
     </head>
     <body>
+      <button id="addGroup">Add Group</button>
       <p>Open a tab group.</p>
-      <button id="openTabsButton" value="Open"></button>
+      <div id="openGroupButtons"></div>
       <script src="popup.js"></script>
     </body>
   </html>
