--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
     <head>
       <link rel="stylesheet" href="popup.css"></link>
     </head>
+    <link rel="stylesheet" href="popup.css">
     <body>
       <button id="addGroup">Add Group</button>
       <p>Open a tab group.</p>
