--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="popup.css"></link>
     </head>
     <body>
+      <div class = "box">
       <button id="addGroup">Add Group</button>
       <p>Open a tab group.</p>
       <div id="openGroupButtons"></div>
@@ -17,5 +18,6 @@
 	  <p>Remove a tab group.</p>
 	  <div id="removeGroupButton"></div>
       <script src="popup.js"></script>
+      </div>
     </body>
   </html>
