--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,8 @@
       <link rel="stylesheet" href="popup.css"></link>
     </head>
     <body>
-      <div class = "box">
+      <div class = "box"></div>
+        
       <button id="addGroup">Add Group</button>
       <p>Open a tab group.</p>
       <div id="openGroupButtons"></div>
@@ -18,6 +19,7 @@
 	  <p>Remove a tab group.</p>
 	  <div id="removeGroupButton"></div>
       <script src="popup.js"></script>
-      </div>
+      <div class = "box2"></div>
+      
     </body>
   </html>
