--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="popup.css"></link>
       <button id="editGroupsButton">+|-</button>
     </head>
+    <box class="box"></box>
     <body>
       <button id="addGroup">Add Group</button>
       <p>Open a tab group.</p>
