--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
         <button id="editGroups">+|-</button>
       </div>
     </head>
+    <div class="innerShadow"></div>
     <!-- This box is where the swoop animation plays -->
     <box class="box"></box>
     <body>
@@ -13,6 +14,10 @@
       <button id="addGroupButton" class="editGroups" style="display:none">Add</button>
       <!-- Tab Groups Generate in this Div -->
       <div id="openGroupButtons"></div>
+      <div id="openGroupButtons-empty" style="display:none">
+        <h2>Your tab groups will appear here.</h2>
+        <h3>Add some groups to get started.</h3>
+      </div>
       <script src="popup.js"></script>
     </body>
   </html>
