--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
     <head>
       <link rel="stylesheet" href="popup.css"></link>
       <div id="headerBox">
-        <button id="editGroups">+|-</button>
+        <button id="editGroups"></button>
       </div>
     </head>
     <div class="innerShadow"></div>
