--- a/settings.html
+++ b/settings.html
@@ -12,7 +12,7 @@
 		<input id="addGroupText" class="editGroups" style="display:none">
 		<div class="custom-select" style="width:200px;">
 			<select>
-				<option value="0">Select car:</option>
+				<option value="0">Select time:</option>
 				<option value="1">Seconds</option>
 				<option value="2">Minutes</option>
 				<option value="3">Days</option>
