--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
     <head>
       <link rel="stylesheet" href="popup.css"></link>
       <div id="headerBox">
+        <button id="settingsButton"></button>
         <button id="editGroups"></button>
       </div>
     </head>
