--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,7 @@
   			<option value="4">4x</option>
   		</select>
       <br>
-      <button class="saveButton">Save</button>
+      <button id="saveButton" class="saveButton">Save</button>
     </div>
 	</body>
 </html>
