--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,30 @@
   			<option value="4">4x</option>
   		</select>
       <br>
-      <button id="saveButton" class="saveButton">Save</button>
+      <button id="saveButton" class="settingsButton">Save</button>
+    
+      <div id="testing" style="display:none">
+        <!--<link rel="stylesheet" type="text/css" href="testing/jasmine/lib/jasmine-2.5.2/jasmine.css">-->
+
+        <script src="testing/jasmine/lib/jasmine-2.5.2/jasmine.js"></script>
+        <script src="testing/jasmine/lib/jasmine-2.5.2/jasmine-html.js"></script>
+        <script src="testing/jasmine/lib/jasmine-2.5.2/boot.js"></script>
+
+        <!-- include spec files here -->
+        <!-- a test script for the functions which occur on load -->
+        <script src="testing/spec/load_spec.js"></script>
+
+        <!-- source files to be tested  -->
+        <script src="background.js"></script>
+        <script src="popup.js"></script>
+        <script src="settings.js"></script>
+
+        <script src="testing/loadjasmine.js"></script>
+
+        <button class="settingsButton" id="loadjasmine">Load Jasmine</button>
+        <button class="settingsButton" id="runtests">Run Tests</button>
+
+      </div>
     </div>
 	</body>
 </html>
